--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,26 @@
 #
 #-----------------------------------------------------------------------------
 
-language: cpp
+language: generic
 
 sudo: false
 
+dist: trusty
+
+env:
+    - LIBOSMIUM_USERS="osm-area-tools osm-gis-export osmcoastline osmium-contrib osmium-tool"
+
+#-----------------------------------------------------------------------------
+
 install:
-    - for repos in libosmium osmium-tool osmium-contrib osmcoastline; do
+    - for repos in libosmium $LIBOSMIUM_USERS; do
           git clone --quiet --depth 1 https://github.com/osmcode/${repos}.git ../${repos};
       done
 
 script:
     - cd ..
-    - for repos in osmium-tool osmium-contrib osmcoastline; do
+    - for repos in $LIBOSMIUM_USERS; do
           cmp libosmium/cmake/FindOsmium.cmake ${repos}/cmake/FindOsmium.cmake || exit 1;
       done
 
+#-----------------------------------------------------------------------------
